# mikanos-rs

./: .gitignore  Cargo.toml  README.md  run.sh  rust-toolchain.toml
mikanos-rs-frame-buffer/: Cargo.toml
mikanos-rs-frame-buffer/src/: lib.rs
mikanos-rs-kernel/: Cargo.toml  build.rs  x86_64-mikanos_rs.json
mikanos-rs-kernel/.cargo/: config.toml
mikanos-rs-kernel/cpp/: ffi.cpp  logger.cpp
mikanos-rs-kernel/src/: allocator.rs  console.rs  descriptor.rs  event.rs  font.rs  interrupt.rs  main.rs  memory_manager.rs  mouse.rs  paging.rs  pci.rs  queue.rs  segment.rs  serial.rs  task.rs  timer.rs  xhci.rs
mikanos-rs-loader/: Cargo.toml
mikanos-rs-loader/src/: main.rs
src/: main.rs
tools/font_array_generator/: README.md  go.mod  main.go
