[package]
name = "mikanos-rs-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
mikanos-rs-frame-buffer = { path = "../mikanos-rs-frame-buffer" }
uefi = { version = "0.33.0", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.10.0"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"

[build-dependencies]
cc = "1.2.29"
glob = "0.3.2"
