[package]
name = "mikanos-rs-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
goblin = { version = "0.9.2", features = ["elf64", "elf32", "endian_fd"], default-features = false}
uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }
mikanos-rs-frame-buffer = { path = "../mikanos-rs-frame-buffer" }
